# chaotic-frenchy

./: Cargo.toml  README.md  justfile
discord-bot/: Cargo.toml
discord-bot/src/: main.rs
