[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise =  { version = "0.6.1", features = ["cache"] }
shuttle-runtime = "0.51.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.51.0"
tracing = "0.1.37"
tokio = "1.26.0"